syntax = "proto3";
option java_multiple_files = true;

package dk.via;



service SlaughterHouse{
  rpc getAnimal (GetAnimalRequest) returns (GetAnimalResponse);
  rpc getAnimals (GetAnimalsRequest) returns (GetAnimalsResponse);

  rpc getPart (GetPartRequest) returns (GetPartResponse);
  rpc getParts (GetPartsRequest) returns (GetPartsResponse);

  rpc getTray (GetTrayRequest) returns (GetTrayResponse);
  rpc getTrays (GetTraysRequest) returns (GetTraysResponse);

  rpc getProduct (GetProductRequest) returns (GetProductResponse);
  rpc getProducts (GetProductsRequest) returns (GetProductsResponse);

  rpc GetAnimalsForProduct (GetAnimalsForProductRequest) returns (GetAnimalsForProductResponse);
  rpc GetProductsForAnimal (GetProductsForAnimalRequest) returns (GetProductsForAnimalResponse);
}

message GetAnimalsForProductRequest {
  int32 productNum = 1;
}

message GetAnimalsForProductResponse {
  repeated int32 animalNums = 1;
}

message GetProductsForAnimalRequest {
  int32 animalNum = 1;
}

message GetProductsForAnimalResponse {
  repeated int32 productNums = 1;
}

message DTOAnimal {
  string type = 1;
  double weight = 2;
  int32 registrationNumber = 3;
}

message DTOPart {
  int32 regNum = 1;
  int32 trayNum = 2;
  int32 originNum = 3;
  int32 productNum = 4;
  string type = 5;
  double weight = 6;
}

message DTOTray {
  int32 trayNum =1;
  double maxCapacity =2;
  double currentWeight=3;
  repeated DTOPart parts =4; //That repeated is used for lists :)
}

message DTOProduct {
  int32 productNum = 1;
  repeated DTOPart parts =2;
}


message GetAnimalRequest { int32 registrationNumber = 1; }
message GetAnimalResponse { DTOAnimal animal = 1; }
//
message GetAnimalsRequest {}
message GetAnimalsResponse { repeated DTOAnimal animals = 1; }
//
message GetPartRequest { int32 regNum = 1; }
message GetPartResponse { DTOPart part = 1; }
//
message GetPartsRequest {}
message GetPartsResponse { repeated DTOPart parts = 1; }
//
message GetTrayRequest { int32 trayNum = 1; }
message GetTrayResponse { DTOTray tray = 1; }
//
message GetTraysRequest {}
message GetTraysResponse { repeated DTOTray trays = 1; }
//
message GetProductRequest { int32 productNum = 1; }
message GetProductResponse { DTOProduct product = 1; }

message GetProductsRequest {}
message GetProductsResponse { repeated DTOProduct products = 1; }




